--- a/library-self-checkout/src/renderer/index.html
+++ b/library-self-checkout/src/renderer/index.html
@@ -5,10 +5,57 @@
     <title>Electron</title>
     <link href="/src/main.css" rel="stylesheet">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
+    /> -->
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+        connect-src 'self' http://localhost:3001 https://localhost:4932;
+        script-src  'self';
+        style-src   'self' 'unsafe-inline';
+        img-src     'self' data:;
+        worker-src 'self' blob:;
+      "
+    /> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'wasm-unsafe-eval' 'unsafe-eval';
+      worker-src 'self';
+      connect-src 'self' http://localhost:3001 https://localhost:4932 ws://localhost:5173;
+      img-src 'self' data: blob:;
+      style-src 'self' 'unsafe-inline';
+      media-src 'self' blob:;
+      frame-src 'none';
+    "> -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src  'self' 'wasm-unsafe-eval' 'unsafe-eval' https://cdn.jsdelivr.net;
+      worker-src  'self' blob:;
+      child-src   'self' blob:;
+      connect-src 'self' data: http://localhost:3001 https://localhost:4932 https://cdn.jsdelivr.net https://tessdata.projectnaptha.com ws://localhost:5173;
+      img-src     'self' data: blob:;
+      style-src   'self' 'unsafe-inline';
+      media-src   'self' blob:;
+      frame-src   'none';
+    ">
+
+
+
+    <!-- <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src  'self' 'wasm-unsafe-eval' 'unsafe-eval';
+      worker-src  'self' blob:;
+      child-src   'self' blob:;
+      connect-src 'self' http://localhost:3001 https://localhost:4932 https://tessdata.projectnaptha.com ws://localhost:5173;
+      img-src     'self' data: blob:;
+      style-src   'self' 'unsafe-inline';
+      media-src   'self' blob:;
+      frame-src   'none';
+    "> -->
+
   </head>
 
   <body>
